--- a/index.html
+++ b/index.html
@@ -1,42 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Website</title>
-    <!-- You can link your CSS stylesheets here -->
-    <link rel="stylesheet" href="styles.css" />
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <header>
-      <h1>Welcome to My Website</h1>
-    </header>
-
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-
-    <main>
-      <section>
-        <h2>About Us</h2>
-        <p>This is where you can write about your website or company.</p>
-      </section>
-
-      <section>
-        <h2>Contact Us</h2>
-        <p>Feel free to reach out to us through the contact form or email.</p>
-      </section>
-    </main>
-
-    <footer>
-      <p>&copy; 2024 My Website. All rights reserved.</p>
-    </footer>
-
-    <!-- You can link your JavaScript files here -->
-    <script src="script.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
